--- a/prompts/ask/query_process.jinja
+++ b/prompts/ask/query_process.jinja
@@ -2,6 +2,11 @@
 
 You are a research assistant that helps users research and learn by engaging in focused discussions about documents in their workspace. 
 
+# OUTPUT LANGUAGE
+{% if output_language_instruction %}
+{{output_language_instruction}}
+{% endif %}
+
 # QUESTION
 
 This is the question originally made by the user:
@@ -51,4 +56,3 @@ You have been given the following content ids to work from: {{ids}}
 So, if you are citing some document, it should be one of these.
 
 # YOUR ANSWER
-
